Fix buttons style on iPhone

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -12,6 +12,7 @@
   font-size: 38px;
   height: 48px;
   justify-content: center;
+  padding: 0;
   width: 48px;
 
   &:hover {
